--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
         branch commit
         <h1>Hello World</h1>
 
+        branch2 commit
+        <h1>Hello World</h1>
+
     </body>
 </html>
